WeetStore.log
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:11: error: ';' expected
    public boolean isEmpty(){return (tail == null || head == null)}
                                                                  ^
uk\ac\warwick\java\cs126\services\WeetStore.java:38: error: cannot find symbol
        Pattern MY_PATTERN = Pattern.compile("#(\\S+)");
        ^
  symbol:   class Pattern
  location: class WeetStore
uk\ac\warwick\java\cs126\services\WeetStore.java:38: error: cannot find symbol
        Pattern MY_PATTERN = Pattern.compile("#(\\S+)");
                             ^
  symbol:   variable Pattern
  location: class WeetStore
uk\ac\warwick\java\cs126\services\WeetStore.java:39: error: cannot find symbol
        Matcher mat = MY_PATTERN.matcher(message);
        ^
  symbol:   class Matcher
  location: class WeetStore
uk\ac\warwick\java\cs126\services\WeetStore.java:90: error: incompatible types: WeetListElement<Weet> cannot be converted to ListElement<User>
        ListElement<User> ptr = head;
                                ^
uk\ac\warwick\java\cs126\services\WeetStore.java:95: error: incompatible types: User[] cannot be converted to Weet[]
        return tmp;
               ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: not a statement
        E[this.size()] tmp;
         ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: ';' expected
        E[this.size()] tmp;
                      ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: not a statement
        E[this.size()] tmp;
                       ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:22: error: incompatible types: ListElement<HashtagElement> cannot be converted to HashtagStoreElement<HashtagElement>
            ptr = ptr.getNext();
                             ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:30: error: incompatible types: ListElement<HashtagElement> cannot be converted to HashtagStoreElement<HashtagElement>
            ptr = ptr.getNext();
                             ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:53: error: incompatible types: cannot infer type arguments for HashtagStoreElement<>
            HashtagStoreElement<HashtagElement> tmp2 = new HashtagStoreElement<>(tmp2);
                                                                              ^
    reason: inference variable E has incompatible bounds
      equality constraints: HashtagElement
      lower bounds: HashtagStoreElement<HashtagElement>
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:62: error: incompatible types: ListElement<HashtagElement> cannot be converted to HashtagStoreElement<HashtagElement>
                    HashtagStoreElement<HashtagElement> ptr = find.getPrev();
                                                                          ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:65: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                        find.getNext().setPrev(ptr);
                                               ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:67: error: incompatible types: ListElement<HashtagElement> cannot be converted to HashtagStoreElement<HashtagElement>
                            tail = find.getPrev();
                                               ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:71: error: incompatible types: ListElement<HashtagElement> cannot be converted to HashtagStoreElement<HashtagElement>
                                ptr = ptr.getPrev();
                                                 ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:74: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                                    find.setPrev(ptr);
                                                 ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:75: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                                    ptr.setNext(find);
                                                ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:78: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                                    head.setPrev(find);
                                                 ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:79: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                                    find.setNext(head);
                                                 ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:85: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                            head.setPrev(find);
                                         ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:86: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                            find.setNext(head);
                                         ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:96: error: incompatible types: cannot infer type arguments for HashtagStoreElement<>
                HashtagStoreElement<HashtagElement> tmp2 = new HashtagStoreElement<>(tmp2);
                                                                                  ^
    reason: inference variable E has incompatible bounds
      equality constraints: HashtagElement
      lower bounds: HashtagStoreElement<HashtagElement>
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:97: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                tail.setNext(tmp2);
                             ^
.\uk\ac\warwick\java\cs126\services\HashtagStore.java:98: error: incompatible types: HashtagStoreElement<HashtagElement> cannot be converted to ListElement<HashtagElement>
                tmp2.setPrev(tail);
                             ^
.\uk\ac\warwick\java\cs126\services\HashtagStoreElement.java:16: error: incompatible types: HashtagStoreElement<E> cannot be converted to ListElement<E>
        return this.next;
                   ^
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\HashtagStoreElement.java:19: error: incompatible types: HashtagStoreElement<E> cannot be converted to ListElement<E>
        return this.prev;
                   ^
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\HashtagStoreElement.java:23: error: incompatible types: ListElement<E> cannot be converted to HashtagStoreElement<E>
        this.next = e;
                    ^
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\HashtagStoreElement.java:26: error: incompatible types: ListElement<E> cannot be converted to HashtagStoreElement<E>
        this.prev = e;
                    ^
  where E is a type-variable:
    E extends Object declared in class HashtagStoreElement
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: cannot find symbol
        E[this.size()] tmp;
        ^
  symbol:   variable E
  location: class MyLinkedList<E>
  where E is a type-variable:
    E extends Object declared in class MyLinkedList
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:77: error: cannot find symbol
            tmp[i] = ptr.getValue();
            ^
  symbol:   variable tmp
  location: class MyLinkedList<E>
  where E is a type-variable:
    E extends Object declared in class MyLinkedList
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
31 errors
